--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -608,7 +608,7 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mandeep Singh" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1D-b1-FX9">
-                                                    <rect key="frame" x="67" y="16" width="280" height="21"/>
+                                                    <rect key="frame" x="67" y="15" width="280" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="VisbyCF-Medium" family="Visby CF" pointSize="16"/>
                                                     <color key="textColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1028,6 +1028,22 @@
             </objects>
             <point key="canvasLocation" x="729" y="2311"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="hEA-9n-hrK">
+            <objects>
+                <navigationController id="iuz-ul-Vai" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="A8q-Es-6uF">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="isS-Sv-T1f" kind="relationship" relationship="rootViewController" id="v01-u5-2mQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LIQ-v4-WoS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1497" y="2318"/>
+        </scene>
         <!--Cast Detail-->
         <scene sceneID="n8f-Ul-c9d">
             <objects>
@@ -1037,11 +1053,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Scb-hc-IQ7">
-                                <rect key="frame" x="0.0" y="90" width="375" height="30"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="30"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1iz-7M-8Pz">
-                                        <rect key="frame" x="12" y="10" width="87" height="24"/>
+                                        <rect key="frame" x="12" y="0.0" width="87" height="24"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.39215686274509803" green="0.65098039215686276" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" name="VisbyCF-Regular" family="Visby CF" pointSize="14"/>
@@ -1053,7 +1069,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34X-Ta-IVH">
-                                        <rect key="frame" x="260" y="10" width="107" height="24"/>
+                                        <rect key="frame" x="260" y="0.0" width="107" height="24"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="VisbyCF-Regular" family="Visby CF" pointSize="14"/>
                                         <inset key="imageEdgeInsets" minX="10" minY="3" maxX="0.0" maxY="0.0"/>
@@ -1067,31 +1083,12 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Kk3-st-DCF">
-                                <rect key="frame" x="0.0" y="130" width="375" height="345"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="isS-Sv-T1f" id="1us-mZ-lxW"/>
-                                    <outlet property="delegate" destination="isS-Sv-T1f" id="Rls-r3-WPd"/>
-                                </connections>
-                            </tableView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="31B-Qx-a1r">
-                                <rect key="frame" x="0.0" y="490" width="375" height="110"/>
+                                <rect key="frame" x="0.0" y="520" width="375" height="100"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Type a message..." translatesAutoresizingMaskIntoConstraints="NO" id="Gff-aO-1Sx">
-                                        <rect key="frame" x="15" y="10" width="344" height="54"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" name="VisbyCF-Regular" family="Visby CF" pointSize="16"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                        <connections>
-                                            <outlet property="delegate" destination="isS-Sv-T1f" id="aHy-km-Ruw"/>
-                                        </connections>
-                                    </textView>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i3A-O3-yWF">
-                                        <rect key="frame" x="220" y="75" width="39" height="30"/>
+                                        <rect key="frame" x="220" y="70" width="39" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.039215686274509803" green="0.34509803921568627" blue="0.72156862745098038" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" image="clips"/>
@@ -1100,7 +1097,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SeF-yk-w9f">
-                                        <rect key="frame" x="259" y="75" width="100" height="30"/>
+                                        <rect key="frame" x="259" y="70" width="100" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.39215686274509803" green="0.65098039215686276" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" name="VisbyCF-Regular" family="Visby CF" pointSize="16"/>
@@ -1109,13 +1106,33 @@
                                             <action selector="submitBtnClicked:" destination="isS-Sv-T1f" eventType="touchUpInside" id="jn5-kU-rzC"/>
                                         </connections>
                                     </button>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Type a message..." translatesAutoresizingMaskIntoConstraints="NO" id="Gff-aO-1Sx">
+                                        <rect key="frame" x="15" y="5" width="344" height="55"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="VisbyCF-Regular" family="Visby CF" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="isS-Sv-T1f" id="aHy-km-Ruw"/>
+                                        </connections>
+                                    </textView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Kk3-st-DCF">
+                                <rect key="frame" x="0.0" y="130" width="375" height="382"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="isS-Sv-T1f" id="1us-mZ-lxW"/>
+                                    <outlet property="delegate" destination="isS-Sv-T1f" id="Rls-r3-WPd"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="vGW-Nj-zIG"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Cast Detail" id="qUz-cf-H7l"/>
                     <connections>
                         <outlet property="attachmentBtn" destination="i3A-O3-yWF" id="qWk-d7-Cr8"/>
                         <outlet property="changeStatusBtn" destination="34X-Ta-IVH" id="PBz-t7-sTX"/>
@@ -1124,11 +1141,12 @@
                         <outlet property="submitBtn" destination="SeF-yk-w9f" id="GRq-XM-vRM"/>
                         <outlet property="textArea" destination="Gff-aO-1Sx" id="p4w-BT-wl5"/>
                         <outlet property="textAreaBtnBottomView" destination="31B-Qx-a1r" id="faf-oD-gi7"/>
+                        <outlet property="topButtonBars" destination="Scb-hc-IQ7" id="I0z-FL-wQl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LHQ-Bp-ChR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1400.8" y="2309.5952023988007"/>
+            <point key="canvasLocation" x="2216.8000000000002" y="2317.6911544227887"/>
         </scene>
         <!--Edit Profile-->
         <scene sceneID="AeQ-bD-2Iw">
@@ -1393,6 +1411,7 @@
                         <outlet property="noPostsIcon" destination="m2U-zb-Jxv" id="gRY-o4-eHq"/>
                         <outlet property="noPostsText" destination="zcJ-FG-BB7" id="avG-bC-xia"/>
                         <outlet property="socialPostList" destination="qFE-ao-mEh" id="Tjf-j0-S0u"/>
+                        <segue destination="iuz-ul-Vai" kind="show" id="flT-e9-Wvh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZRF-ob-EWS" userLabel="First Responder" sceneMemberID="firstResponder"/>
