--- a/precastr/controller/communication/cells/RightCommunicationTableViewCell.xib
+++ b/precastr/controller/communication/cells/RightCommunicationTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.43"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,14 +24,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="463" height="406.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yJF-ZV-li7">
-                        <rect key="frame" x="64" y="130" width="390" height="200"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                        <viewLayoutGuide key="safeArea" id="gA8-wp-HD8"/>
-                        <connections>
-                            <outlet property="delegate" destination="KGk-i7-Jjw" id="wMm-Xo-VY1"/>
-                        </connections>
-                    </scrollView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Profile-1" translatesAutoresizingMaskIntoConstraints="NO" id="nLZ-FH-DSj">
                         <rect key="frame" x="15" y="20" width="40" height="40"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -54,6 +46,13 @@
                         <color key="pageIndicatorTintColor" red="0.75686274509803919" green="0.75686274509803919" blue="0.75686274509803919" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="currentPageIndicatorTintColor" red="0.047058823529411764" green="0.43529411764705883" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </pageControl>
+                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zI1-Op-Wip">
+                        <rect key="frame" x="64" y="130" width="390" height="200"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <connections>
+                            <outlet property="delegate" destination="KGk-i7-Jjw" id="vGz-Q9-4YR"/>
+                        </connections>
+                    </scrollView>
                 </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -61,7 +60,7 @@
                 <outlet property="commentedDate" destination="jc8-KP-PE9" id="yTi-hJ-DFG"/>
                 <outlet property="commentorPic" destination="nLZ-FH-DSj" id="1q4-C3-BaO"/>
                 <outlet property="descriptionView" destination="kuB-pI-Vxw" id="X1J-gc-sL5"/>
-                <outlet property="imageScrollView" destination="yJF-ZV-li7" id="F0w-vL-ccc"/>
+                <outlet property="imageScrollView" destination="zI1-Op-Wip" id="5mW-aa-UWh"/>
                 <outlet property="pageControl" destination="CEX-HL-tym" id="AkB-B9-zBj"/>
             </connections>
             <point key="canvasLocation" x="112" y="48.575712143928037"/>
